--- a/style/stockModule.css
+++ b/style/stockModule.css
@@ -30,4 +30,14 @@ body{
     background-size:1000px;
 }
 
-
+#container{
+    background-color: #017bab;    
+    margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+    text-align: center;
+    font-size: x-large;
+    color: white;
+    background: rgba(1, 123, 171,0.5);
+}
