--- a/views/addStock.html
+++ b/views/addStock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/updateStock.css">
+    <link rel="stylesheet" href="/style/addStock.css">
     <title>Agregar Stock</title>
 </head>
 <body>
