--- a/views/updateStock.html
+++ b/views/updateStock.html
@@ -18,7 +18,11 @@
         </p>
     </div>
     <input class="buttons" type="button" value="Guardar">
-    <input class="buttons" type="button" value="Agregar">
-    <input class="buttons" type="button" value="Eliminar">
+    <a href="addStock.html">
+        <input class="buttons" type="button" value="Agregar">
+    </a>
+    <a href="deleteStock.html">
+        <input class="buttons" type="button" value="Eliminar">
+    </a>
 </body>
 </html>
