Move To Other Page

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,10 @@
         </div>
         <input class="controls" type="text" name="usuario" value="" placeholder="Usuario">
         <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña">
-        <input class="buttons" type="submit" name="" value="Ingresar">
+        <a href="selectionModule.html">
+            <input class="buttons" type="submit" name="" value="Ingresar">
+        </a>
+        
     </section>
 </body>
 </html>
