--- a/views/selectionModule.html
+++ b/views/selectionModule.html
@@ -11,7 +11,9 @@
     <header>
         <h1>Selección Módulo</h1>
     </header>
-    <input class="buttons" type="button" value="Ingresar Módulo Stock">
+    <a href="stockModule.html">
+        <input class="buttons" type="button" value="Ingresar Módulo Stock">
+    </a>
     <input class="buttons" type="button" value="Ingresar Módulo Finanzas">
 </body>
 </html>
