--- a/views/stockModule.html
+++ b/views/stockModule.html
@@ -17,6 +17,9 @@
             Ropa niño verano $150.000 <br>
         </p>
     </div>
-    <input class="buttons" type="button" value="Actualizar">
+    <a href="updateStock.html">
+        <input class="buttons" type="button" value="Actualizar">
+    </a>
+    
 </body>
 </html>
