Add Firebase Credentials

--- a/views/index.html
+++ b/views/index.html
@@ -12,12 +12,15 @@
         <div class="center">   
             <img src="/files/eslam.jpg" alt="eslam">
         </div>
-        <input class="controls" type="text" name="usuario" value="" placeholder="Usuario">
-        <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña">
-        <a href="selectionModule.html">
-            <input class="buttons" type="submit" name="" value="Ingresar">
-        </a>
-        
+        <form id="task-form">
+            <input type="text" id="user" placeholder="Usuario">
+            <input class="controls" id="pass" placeholder="Contraseña">
+            <a href="selectionModule.html">
+                <input class="buttons" type="submit" name="" value="Ingresar">
+            </a>
+        </form>
     </section>
+
+    <script type="module" src="/javascript/index.js"></script>
 </body>
 </html>
