--- a/views/index.html
+++ b/views/index.html
@@ -12,13 +12,12 @@
         <div class="center">   
             <img src="/files/eslam.jpg" alt="eslam">
         </div>
-        <form id="task-form">
-            <input type="text" id="user" placeholder="Usuario">
-            <input class="controls" id="pass" placeholder="Contraseña">
-            <a href="selectionModule.html">
-                <input class="buttons" type="submit" name="" value="Ingresar">
-            </a>
+        <form action="" id="formlogin">
+            <input type="text" id="user" placeholder="Usuario" required>
+            <input type="password" id="pass" placeholder="Contraseña" required>
+            <input type="button" onclick="getData()" value="Iniciar sesión">
         </form>
     </section>
+    <script src="/javascript/login.js"></script>
 </body>
 </html>
