Add ref to Stock

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seleccion de Modulo</title>
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <h1>Página de Inicio</h1>
-            <% if (login) { %>                                       
-                <a href="logout" class="a-logout">Cerrar Sesión</a>
-            <%} else { %>  
-                <a href="login" class="a-login">Ir a Login</a>
-            <% } %>
+    <h1>Seleccion de Modulo</h1>
+    <a href="stock" > Módulo Stock</a>
+
+
+
+
+
+    <% if (login) { %>                                       
+        <a href="logout" class="a-logout">Cerrar Sesión</a>
+    <%} else { %>  
+        <a href="login" class="a-login">Ir a Login</a>
+    <% } %>
 </body>
 </html>
