--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -1,12 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo Stock</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <title> Módulo stock</title>
+  </head>
+  <body>
+    <h1> Módulo Stock</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="container">
+        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+        <table class="table table-bordered table-striped text-center mt-4">
+            <thead>
+                <tr class="text-white" style="background-color:#6200ee;">
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Precio</th>            
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">Categoria</th>            
+                    <th scope="col">Peso</th>
+                    <th scope="col">Volumen</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% results.forEach((fardo)=> { %>
+                <tr>
+                    <td> <%- fardo.nombre %></td>
+                    <td> <%- fardo.precio %></td>
+                    <td> <%- fardo.cantidad  %></td>
+                    <td> <%- fardo.categoria %></td>
+                    <td> <%- fardo.peso %></td>
+                    <td> <%- fardo.volumen %></td>
+                    <td> 
+                        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+                        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+                    </td>
+                </tr>
+                <% }) %>
+            </tbody>
+        </table>
+    </div>
+  </body>
 </html>
