--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,36 +12,37 @@
     <title> Módulo stock</title>
   </head>
   <body>
-    
+    <% if (fardo) { %>
     <div class="container mt-4">
-        <h1> Agregar Stock </h1>
+        <h1> Editar Stock </h1>
             <div class="card border-secondary">  
-                <div class="card-header">Agregar Registro de Fardo</div>
+                <div class="card-header">Editar Fardo Registrado</div>
                 <div class="card-body">
-                    <form action="/save" method="POST">
+                    <form action="/update" method="POST">
+                        <input id="id" name="id" value="<%= fardo.id %>" hidden>
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Nombre</label>
-                          <input type="text" class="form-control" id="nombre" name="nombre" tabindex="1">
+                          <input type="text" class="form-control" id="nombre" name="nombre" tabindex="1" value="<%= fardo.nombre  %>">
                         </div>   
                         <div class="mb-3">
                           <label for="" class="form-label">Precio</label>
-                          <input type="text" class="form-control" id="precio" name="precio" tabindex="1">
+                          <input type="text" class="form-control" id="precio" name="precio" tabindex="1" value="<%= fardo.precio  %>">
                         </div> 
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Cantidad</label>
-                          <input type="text" class="form-control" id="cantidad" name="cantidad" tabindex="1">
+                          <input type="text" class="form-control" id="cantidad" name="cantidad" tabindex="1" value="<%= fardo.cantidad %>">
                         </div>  
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Categoria</label>
-                          <input type="text" class="form-control" id="categoria" name="categoria" tabindex="1">
+                          <input type="text" class="form-control" id="categoria" name="categoria" tabindex="1" value="<%= fardo.categoria  %>">
                         </div>  
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Peso</label>
-                          <input type="text" class="form-control" id="peso" name="peso" tabindex="1">
+                          <input type="text" class="form-control" id="peso" name="peso" tabindex="1" value="<%= fardo.peso  %>">
                         </div>      
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Volumen</label>
-                          <input type="text" class="form-control" id="volumen" name="volumen" tabindex="1">
+                          <input type="text" class="form-control" id="volumen" name="volumen" tabindex="1" value="<%= fardo.volumen  %>">
                         </div>     
                         <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
                         <a href="/" class="btn btn-secondary">Cancelar</a>
@@ -49,5 +50,6 @@
                 </div>
             </div>        
     </div>
+    <% } %>
   </body>
 </html>
