--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -15,7 +15,7 @@
     <h1> Módulo Stock</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="container">
-        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+        <a href="/create" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
         <table class="table table-bordered table-striped text-center mt-4">
             <thead>
                 <tr class="text-white" style="background-color:#6200ee;">
@@ -31,15 +31,16 @@
             <tbody>
                 <% results.forEach((fardo)=> { %>
                 <tr>
-                    <td> <%- fardo.nombre %></td>
-                    <td> <%- fardo.precio %></td>
-                    <td> <%- fardo.cantidad  %></td>
-                    <td> <%- fardo.categoria %></td>
-                    <td> <%- fardo.peso %></td>
-                    <td> <%- fardo.volumen %></td>
+                    <td> <%= fardo.id %></td>
+                    <td> <%= fardo.nombre %></td>
+                    <td> <%= fardo.precio %></td>
+                    <td> <%= fardo.cantidad  %></td>
+                    <td> <%= fardo.categoria %></td>
+                    <td> <%= fardo.peso %></td>
+                    <td> <%= fardo.volumen %></td>
                     <td> 
-                        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
-                        <a href="/views/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+                        <a href="/edit/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-edit-alt bx-md'></i></a>
+                        <a href="/create.ejs" class="btn btn-outline-primary mt-4"><i class='bx bx-trash bx-md' ></i></a>
                     </td>
                 </tr>
                 <% }) %>
