--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,7 @@
 <body>
     <h1>Seleccion de Modulo</h1>
     <a href="stock" > Módulo Stock</a>
-
-
-
-
+    <a href="finance" > Módulo Finanzas</a>
 
     <% if (login) { %>                                       
         <a href="logout" class="a-logout">Cerrar Sesión</a>
