--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,14 @@
 body{
     background-color: white;
     font-family: roboto;
-    margin: auto;
+    margin: 50px;
     text-align: center;
+    background-image: url("/resources/files/eslam.jpg");
+    height: 800px;
+    background-position: center; 
+    background-repeat:no-repeat;
+    background-size:900px;
+
 }
 
 /* Login form */
@@ -13,10 +19,15 @@ body{
 
 .login-form h1{
     text-align: center;
-    color: midnightblue;
+    color: white;
     font-size: 28px;
     padding: 70px 0 10px 0;
 }
+
+.login-form h2{
+  text-align: center;
+  color: white;
+  }
 
 .login-form input[type="password"],
 .login-form input[type="text"] {
@@ -31,7 +42,7 @@ body{
 .btn-login{
     width: 100%;
     padding: 15px;
-    background-color: #6f42c1;
+    background: #017bab;
     border: 0;
     box-sizing: border-box;
     cursor: pointer;
@@ -41,8 +52,8 @@ body{
   }
   .btn-login:hover,.btn-login:active{
     color:#fff;
-    background-color:#61428f;
-    border-color:#61428f
+    background: #017bab;
+    border-color: #017bab;
   }
   .btn-login:focus{
     box-shadow:0 0 0 3px rgba(121,82,179,0.25)
