--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="login-form">
-        <h2> Login ESLAM </h2>
+        <h2> Login SIUM</h2>
         <form action="/auth" method="POST"> 
             <input type="text" name="rut" id="rut" placeholder="xxxxxxxx-x" required>
             <input type="password" name="pass" id="pass" placeholder="Contraseña" required>
