Add Sale Button

--- a/views/finance.ejs
+++ b/views/finance.ejs
@@ -11,29 +11,6 @@
     <title>Módulo Finanzas</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Módulo Finanzas</h1>
-        <a href="/record" class="btn btn-outline-primary mt-4"><i class='bx bx-history bx-md'>Ver Historial Finanzas</i></a>
-        <table class="table table-bordered table-striped text-center mt-4">
-            <thead>
-                <tr class="text-white" style="background-color:#6200ee;">
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Ganancias de Hoy</th>            
-                    <th scope="col">Ganancias Mensual</th>
-                    <th scope="col">Valor de la bodega</th>            
-                </tr>
-            </thead>
-            <tbody>
-                <% results.forEach((finanzas)=> { %>
-                <tr>
-                    <td> <%= finanzas.fecha %></td>
-                    <td> <%= finanzas.dinerofardo %></td>
-                    <td> <%= finanzas.totalmensual  %></td>
-                    <td> <%= finanzas.gananciadiaria %></td>
-                </tr>
-                <% }) %>
-            </tbody>
-        </table>
-    </div>
+    <h1> Finanzas me roba el alma</h1>
 </body>
 </html>
