--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -41,6 +41,7 @@
                     <td> 
                         <a href="/edit/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-edit-alt bx-md'></i></a>
                         <a href="/delete/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-trash bx-md' ></i></a>
+                        <a href="/sale/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-money bx-md'></i></a>
                     </td>
                 </tr>
                 <% }) %>
