--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,13 @@ body{
 
 }
 
+h1{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    padding: 30px 0 10px 0;
+}
+
 /* Login form */
 .login-form, .contenedor{
     width: 300px;
@@ -57,4 +64,28 @@ body{
   }
   .btn-login:focus{
     box-shadow:0 0 0 3px rgba(121,82,179,0.25)
+  }
+
+  .btn-NOlogin{
+    width: 150px;
+    padding: 15px;
+    background: #017bab;
+    border: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: large;
+    color: #ffffff;
+  }
+
+  .btn-salir{
+    width: 150px;
+    padding: 15px;
+    background: rgb(175, 28, 28);
+    border: 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: large;
+    color: #ffffff;
   }
