cambio color casilla módulos tock

--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -19,7 +19,7 @@
         <a href="/create" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
         <table class="table table-bordered table-striped text-center mt-4">
             <thead>
-                <tr class="text-white" style="background-color:#6200ee;">
+                <tr class="text-white" style="background-color:#017bab;">
                     <th scope="col">Nombre</th>
                     <th scope="col">Precio</th>            
                     <th scope="col">Cantidad</th>
