Botón ventas (no funcional) + editar->actualizar

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
   <body>
     <% if (fardo) { %>
     <div class="container mt-4">
-        <h1> Editar Stock </h1>
+        <h1> Actualizar Stock </h1>
             <div class="card border-secondary">  
                 <div class="card-header">Editar Fardo Registrado</div>
                 <div class="card-body">
