--- a/views/sale.ejs
+++ b/views/sale.ejs
@@ -25,7 +25,8 @@
                             <label for="Nombre" class="form-label">Cantidad</label>
                             <input type="text" class="form-control" id="cantidad" name="cantidad" tabindex="1" value="<%= fardo.cantidad %>">
                           </div> 
-                        </div>  
+                        </div>
+                        <button type="submit" class="btn btn-primary" tabindex="5">Vender</button>  
                         <a href="/stock" class="btn btn-secondary">Cancelar</a>
                     </form>
                 </div>
