Add stock route

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -44,7 +44,7 @@
                           <input type="text" class="form-control" id="volumen" name="volumen" tabindex="1">
                         </div>     
                         <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
-                        <a href="/" class="btn btn-secondary">Cancelar</a>
+                        <a href="/stock" class="btn btn-secondary">Cancelar</a>
                     </form>
                 </div>
             </div>        
