--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,7 +35,7 @@
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Categoria</label>
                           <input type="text" class="form-control" id="categoria" name="categoria" tabindex="1" value="<%= fardo.categoria  %>">
-                        </div>  
+                        </div>    
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Peso</label>
                           <input type="text" class="form-control" id="peso" name="peso" tabindex="1" value="<%= fardo.peso  %>">
@@ -45,7 +45,7 @@
                           <input type="text" class="form-control" id="volumen" name="volumen" tabindex="1" value="<%= fardo.volumen  %>">
                         </div>     
                         <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
-                        <a href="/" class="btn btn-secondary">Cancelar</a>
+                        <a href="/stock" class="btn btn-secondary">Cancelar</a>
                     </form>
                 </div>
             </div>        
