--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title> Módulo stock</title>
@@ -17,7 +18,7 @@
     <div class="container">
         <h1> Módulo Stock</h1>
         <a href="/create" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
-        <table class="table table-bordered table-striped text-center mt-4">
+        <table id="fardo" class="table table-bordered table-striped text-center mt-4">
             <thead>
                 <tr class="text-white" style="background-color:#017bab;">
                     <th scope="col">Nombre</th>
@@ -40,7 +41,7 @@
                     <td> <%= fardo.volumen %></td>
                     <td> 
                         <a href="/edit/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-edit-alt bx-md'></i></a>
-                        <a href="/delete/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-trash bx-md' ></i></a>
+                        <a onclick="confirmar(<%= fardo.id %>)" class="btn btn-outline-primary mt-4"><i class='bx bx-trash bx-md' ></i></a>
                         <a href="/sale/<%= fardo.id %>" class="btn btn-outline-primary mt-4"><i class='bx bx-money bx-md'></i></a>
                     </td>
                 </tr>
@@ -48,5 +49,34 @@
             </tbody>
         </table>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.9/dist/sweetalert2.all.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $('#fardo').DataTable();
+        })
+
+
+        function confirmar(id) {
+            Swal.fire({
+                title: '¿Confirma eliminar el registro: '+id+'?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#6c757d',
+                confirmButtonText: 'Confirmar'
+            }).then((result) => {
+                if (result.isConfirmed) {   
+                window.location = '/delete/'+id;                              
+                }
+            });
+        };
+
+    </script>
   </body>
 </html>
