--- a/views/record.ejs
+++ b/views/record.ejs
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title> Historial Finanzas</title>
@@ -38,7 +39,7 @@
         <div class="topnav">
           <input type="text" placeholder="Filtrar">
         </div>
-        <table class="table table-bordered table-striped text-center mt-4">
+        <table id="record" class="table table-bordered table-striped text-center mt-4">
             <thead>
                 <tr class="text-white" style="background-color:#017bab;">
                     <th scope="col">Fecha</th>           
@@ -59,5 +60,15 @@
             </tbody>
         </table>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+
+    <script>
+      $(document).ready(function(){
+            $('#record').DataTable();
+        })
+    </script>
+
   </body>
 </html>
