--- a/views/record.ejs
+++ b/views/record.ejs
@@ -36,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="container">
         <h1> Historial Finanzas</h1>
+        <a href="/finance" class="btn btn-outline-primary mt-4"><i class='bx bx-arrow-back bx-md' ></i></a>
         <div class="topnav">
           <input type="text" placeholder="Filtrar">
         </div>
