--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -18,6 +18,7 @@
     <div class="container">
         <h1> Módulo Stock</h1>
         <a href="/create" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md'></i></a>
+        <a href="/index" class="btn btn-outline-primary mt-4"><i class='bx bx-arrow-back bx-md' ></i></a>
         <table id="fardo" class="table table-bordered table-striped text-center mt-4">
             <thead>
                 <tr class="text-white" style="background-color:#017bab;">
@@ -64,7 +65,7 @@
 
         function confirmar(id) {
             Swal.fire({
-                title: '¿Confirma eliminar el registro: '+id+'?',
+                title: '¿Confirma eliminar el registro?',
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#d33',
