--- a/views/create.ejs
+++ b/views/create.ejs
@@ -32,8 +32,11 @@
                           <input type="text" class="form-control" id="cantidad" name="cantidad" tabindex="1">
                         </div>  
                         <div class="mb-3">
-                          <label for="Nombre" class="form-label">Categoria</label>
-                          <input type="text" class="form-control" id="categoria" name="categoria" tabindex="1">
+                          <label for="fardo" class="form-label">Categoría</label>
+                          <select id="categoria" name="categoria" class="form-select" tabindex="2">
+                              <option value="primera" selected>Primera</option>
+                              <option value="segunda">Segunda</option>                    
+                          </select>
                         </div>  
                         <div class="mb-3">
                           <label for="Nombre" class="form-label">Peso</label>
