--- a/views/create.ejs
+++ b/views/create.ejs
@@ -34,8 +34,8 @@
                         <div class="mb-3">
                           <label for="fardo" class="form-label">Categoría</label>
                           <select id="categoria" name="categoria" class="form-select" tabindex="2">
-                              <option value="primera" selected>Primera</option>
-                              <option value="segunda">Segunda</option>                    
+                              <option value="Primera" selected>Primera</option>
+                              <option value="Segunda">Segunda</option>                    
                           </select>
                         </div>  
                         <div class="mb-3">
