Add Label Categoría

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -33,7 +33,7 @@
                           <input type="text" class="form-control" id="cantidad" name="cantidad" tabindex="1" value="<%= fardo.cantidad %>">
                         </div>  
                         <div class="mb-3">
-                          <label for="rol" class="form-label">Rol</label>
+                          <label for="rol" class="form-label">Categoría</label>
                           <select id="categoria" name="categoria" class="form-select"  value="" tabindex="2">
                             <option <%- fardo.categoria=='primera' ? "selected" : "" %> value="Primera">Primera</option>
                             <option <%- fardo.categoria=='segunda' ? "selected" : "" %> value="Segunda">Segunda</option>
